Use collection type that allow null values